# c-homeworks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
include/advancedBracketBalance/: bracketBalance.h  stackOnPointers.h
include/binaryRepresentation/: twosComplement.h
include/countingRhyme/: circularList.h  findWarrior.h
include/doubleMicroscope/: doubleMicroscope.h
include/optimalSorting/: count.h
include/shuntingYard/: shuntingYard.h
include/sortedList/: menu.h  sortedList.h  testSortedList.h
src/advancedBracketBalance/: bracketBalance.c  main.c  stackOnPointers.c
src/arrayFlip/: main.c
src/binaryRepresentation/: main.c  twosComplement.c
src/countingRhyme/: circularList.c  findWarrior.c  main.c
src/doubleMicroscope/: doubleMicroscope.c  main.c
src/fastPolynomialCalculation/: main.c
src/incompleteQuotient/: main.c
src/luckyTickets/: main.c
src/optimalSorting/: Makefile  compilationInstructions.txt  count.c  main.c  mergeSort.c  mergeSort.s
src/shuntingYard/: main.c  shuntingYard.c  stackOnPointers.c
src/simpleBracketBalance/: main.c
src/sortedList/: main.c  menu.c  sortedList.c
src/substringSearch/: main.c
src/zeroElements/: main.c
tests/sortedList/: testSortedList.c
